# holytls

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bench_refactor.txt  build.bat  build.sh
.claude/: GEMINI-HEADER-RESEARCH.txt  GEMINI-PSK-RESEARCH.txt
bench/: bench_common.h  bench_core.cc
cmake/: CompilerFlags.cmake  FetchBoringSSL.cmake  FetchBrotli.cmake  FetchLibuv.cmake  FetchNghttp2.cmake  FetchNghttp3.cmake  FetchNgtcp2.cmake  FetchPicoHTTPParser.cmake  FetchQuiche.cmake  FetchRapidJSON.cmake  FetchZlib.cmake  FetchZstd.cmake
examples/: async_example.cc  cookie_example.cc  custom_headers_example.cc  fingerprint_check.cc  fingerprint_verify.cc  http1_test.cc  ordered_headers_example.cc  proxy_example.cc  quic_example.cc
include/chad/: client.h  config.h  error.h  types.h
include/holytls/: async.h  client.h  config.h  error.h  task.h  types.h
include/holytls/core/: connection.h  io_buffer.h  reactor.h
include/holytls/http/: alt_svc_cache.h
include/holytls/pool/: connection_pool.h  host_pool.h
include/holytls/util/: url_parser.h
patches/boringssl/: IMPERSONATE_PATCHES.md  extensions_reference.cc  internal_h_reference.h  ssl_h_reference.h  ssl_lib_additions.txt  ssl_lib_reference.cc
scripts/: tune_system.sh
src/: main.cc
src/base/: arena.h  buffer.h  list.h  types.h
src/client/: http_client.cc  request.cc  response.cc
src/core/: connection.cc  connection.h  io_buffer.cc  io_buffer.h  reactor.cc  reactor.h  reactor_manager.cc  reactor_manager.h  timer.cc  timer.h
src/holytls/base/: arena.h  buffer.h  list.h  string8.h  sv_util.h  types.h
src/holytls/client/: http_client.cc  request.cc  response.cc
src/holytls/core/: connection.cc  connection.h  io_buffer.cc  io_buffer.h  reactor.cc  reactor.h  reactor_manager.cc  reactor_manager.h  timer.cc  timer.h  udp_socket.cc  udp_socket.h
src/holytls/http/: alt_svc_cache.cc  alt_svc_cache.h  cookie_jar.cc  cookie_jar.h  ordered_headers.cc  ordered_headers.h
src/holytls/http1/: h1_session.cc  h1_session.h
src/holytls/http2/: chrome_h2_profile.cc  chrome_h2_profile.h  chrome_header_builder.cc  chrome_header_builder.h  chrome_header_profile.cc  chrome_header_profile.h  h2_session.cc  h2_session.h  h2_stream.cc  h2_stream.h  header_ids.cc  header_ids.h  packed_headers.cc  packed_headers.h  sec_ch_ua.cc  sec_ch_ua.h
src/holytls/memory/: buffer_pool.cc  buffer_pool.h  slab_allocator.cc  slab_allocator.h
src/holytls/pool/: connection_pool.cc  connection_pool.h  host_pool.cc  host_pool.h  quic_pooled_connection.cc  quic_pooled_connection.h
src/holytls/proxy/: http_proxy.cc  http_proxy.h  socks_constants.h  socks_proxy.cc  socks_proxy.h
src/holytls/quic/: h3_session.cc  h3_session.h  quic_connection.cc  quic_connection.h
src/holytls/tls/: chrome_profile.cc  chrome_profile.h  chrome_profile_data.h  session_cache.cc  session_cache.h  tls_connection.cc  tls_connection.h  tls_context.cc  tls_context.h
src/holytls/util/: async_decompressor.cc  async_decompressor.h  decompressor.cc  decompressor.h  dns_resolver.cc  dns_resolver.h  platform.cc  platform.h  socket_utils.cc  socket_utils.h  sv_helpers.h  url_parser.cc  url_parser.h
src/http2/: chrome_h2_profile.cc  chrome_h2_profile.h  chrome_header_builder.cc  chrome_header_builder.h  chrome_header_profile.cc  chrome_header_profile.h  h2_session.cc  h2_session.h  h2_stream.cc  h2_stream.h  header_ids.cc  header_ids.h  packed_headers.cc  packed_headers.h  sec_ch_ua.cc  sec_ch_ua.h
src/memory/: buffer_pool.cc  buffer_pool.h  slab_allocator.cc  slab_allocator.h
src/pool/: connection_pool.cc  connection_pool.h  host_pool.cc  host_pool.h
src/tls/: chrome_profile.cc  chrome_profile.h  chrome_profile_data.h  session_cache.cc  session_cache.h  tls_connection.cc  tls_connection.h  tls_context.cc  tls_context.h
src/util/: async_decompressor.cc  async_decompressor.h  decompressor.cc  decompressor.h  dns_resolver.cc  dns_resolver.h  platform.cc  platform.h  socket_utils.cc  socket_utils.h  url_parser.cc  url_parser.h
tests/: CMakeLists.txt
tests/integration/: test_fingerprint.cc  test_top_websites.cc
tests/protocol/: CMakeLists.txt  mock_server.cc  mock_server.h  test_http1.cc  test_http2.cc  test_http3.cc
tests/stress/: BENCHMARK.md  CMakeLists.txt  h2o-server-setup.md  stress_test.cc
tests/unit/: test_arena.cc  test_buffer_pool.cc  test_chrome_header_builder.cc  test_ordered_headers.cc  test_packed_headers.cc  test_reactor.cc  test_socks_proxy.cc
